--- a/scss/mixins/_side-menu.scss
+++ b/scss/mixins/_side-menu.scss
@@ -1,15 +1,23 @@
 @mixin side-menu--button($color){
+    @if $color {
+        height: 112.6px;
+    }@else{
+        //contact us button/link is shorter
+        height: auto;
+        margin-top: 20px;
+    }
     display: block;
-    width: 757.4px;
-    height: 233px;
-    padding: 20px;
-    font-size: 1.438rem;          
+    border: 1px solid rgba(0,0,0,.45);
+    border-radius: 3px;
+    // font-size: 1.438rem;          
     text-align: center;
+    font-size: 1.125rem;
+    padding: 20px 0;
+    border-radius: 3px;
+    outline: 1px solid rgba(0,0,0,.25);
+    border: 1px solid hsla(0,0%,100%,.1);
     &:hover{
-        background-color: $color;
-        span:first-child{
-            color: white;
-        }
+        background-color: hsla(0,0%,100%,.05);
     }
     &:link{
         text-decoration: none;
@@ -21,21 +29,21 @@
         text-transform: uppercase;
         display: inline-flex;
         flex-direction: column;
-        padding: 2rem auto;
+        padding: 1.8rem auto;
         *{
             text-align: center;
         }
         //icon
         span:first-child{
             color: $color;
-            font-size: 1.438rem;
+            font-size: 1.838rem;
             display: block;
-            padding-bottom: 10px;
+            // padding-bottom: 10px;
         }//
         small{
-            display: block;
-            padding-bottom: 1px;
-            font-size: .481rem;
+            display: inline-block;
+            padding: 5px 0;
+            font-size: .625rem;
         }
         span:last-child{
             display: inline-block;
@@ -60,10 +68,10 @@
         padding: 0;
         margin: 0;
         transition: .1s;
+        background-color: rgba(0,0,0,.25);
         &:hover{
             //only the leading li (heading) changes bgcolor
             li:first-child{
-                    // background-color: #999aa2;
                     background-color: lighten(#333645, 3%);
                 }
             }
